--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
             background-repeat: no-repeat;
             background-size: cover;
         }
+
+        @media only screen and (min-width: 400px) {
+            .bg {
+                background-image: url("./suap-mobile.png");
+            }
+        }
         
     </style>
 </head>
