--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             background-size: cover;
         }
 
-        @media only screen and (min-width: 400px) {
+        @media (max-width: 480px) {
             .bg {
                 background-image: url("./suap-mobile.png");
             }
